Slides 05: Add regions cases

--- a/teoricas/teorica_05/src/optical_flow.tex
+++ b/teoricas/teorica_05/src/optical_flow.tex
@@ -425,23 +425,33 @@ Ideally: Optical Flow = Motion Field.
 
   \begin{columns}
     \begin{column}{0.6\textwidth}  %%<--- here
+      \only<2->{
       For any point $(x,y)$ in the image, its optical flow $(u,v)$ lies on the line:
-      \[
-      I_x u + I_y v + I_t = 0
-      \]
+        \begin{equation*}
+        I_x u + I_y v + I_t = 0
+        \end{equation*}
+      }
+      \only<3->{
+        Optical Flow can be split into two components.
+        \begin{equation*}
+        \mathbf{u} = \mathbf{u}_n + \mathbf{u}_p
+        \end{equation*}
 
-      Optical Flow can be split into two components.
-
-      \[
-      \mathbf{u} = \mathbf{u}_n + \mathbf{u}_p
-      \]
-
-      $\mathbf{u}_n$: Normal Flow \\
-      $\mathbf{u}_p$: Parallel Flow
+        $\mathbf{u}_n$: Normal Flow\\
+        $\mathbf{u}_p$: Parallel Flow
+      }
     \end{column}
     \begin{column}{0.4\textwidth}
       \begin{center}
-        \includegraphics[width=\columnwidth]{./images/optical_flow/optical_flow_geometric_interpretation.pdf}
+        \only<1>{
+          \includegraphics[width=\columnwidth]{./images/optical_flow/optical_flow_geometric_interpretation_1.pdf}
+        }
+        \only<2>{
+          \includegraphics[width=\columnwidth]{./images/optical_flow/optical_flow_geometric_interpretation_2.pdf}
+        }
+        \only<3>{
+          \includegraphics[width=\columnwidth]{./images/optical_flow/optical_flow_geometric_interpretation_3.pdf}
+        }
       \end{center}
     \end{column}
   \end{columns}
@@ -599,9 +609,9 @@ Ideally: Optical Flow = Motion Field.
 
   \textbf{Assumption}: For each pixel, assume Motion Field, and hence Optical Flow $(u,v)$, is constant within a small neighborhood $W$.
 
-  % \begin{center}
-  % \includegraphics[width=0.55\textwidth]{placeholder}
-  % \end{center}
+  \begin{center}
+    \includegraphics[width=0.55\textwidth]{optical_flow/klt_neighborhood.pdf}
+  \end{center}
 
   That is for all points $(k,l) \in W$:
   \[
@@ -726,6 +736,25 @@ Ideally: Optical Flow = Motion Field.
     
     \vspace{1em}
     \small{\textit{*Note: $\mathbf{u}$ represents the flow vector $(u, v)^T$, $A$ is the gradient matrix, and $B$ is related to the temporal change.}}
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Edges (Bad)}
+
+  \begin{center}
+    \includegraphics[width=0.55\textwidth]{optical_flow/optical_flow_edges.pdf}
+  \end{center}
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Textured Regions (Good)}
+
+  \begin{center}
+    \includegraphics[width=0.55\textwidth]{optical_flow/optical_flow_textured_regions.pdf}
+  \end{center}
+    
 \end{frame}
 
 % Slide 12
