Tp2: Add rosbags link

--- a/tps/tp3/tp3.tex
+++ b/tps/tp3/tp3.tex
@@ -39,7 +39,7 @@ El objetivo del trabajo práctico es la realización de los pasos básicos para 
 \end{itemize}
 
 \section{Datos}
-Utilizar el dataset EuRoC\footnote{\url{https://projects.asl.ethz.ch/datasets/doku.php?id=kmavvisualinertialdatasets}}. Debera convertir la secuencia de calibración a formato ROS2. El resto de las secuencias ya se encuentran en formato ROS2 y pueden ser descargadas de \url{https://docs.openvins.com/gs-datasets.html}
+Utilizar el dataset EuRoC\footnote{\url{https://projects.asl.ethz.ch/datasets/doku.php?id=kmavvisualinertialdatasets}}. Debera convertir la secuencia de calibración a formato ROS2. puede utilizar el software \lstinline{rosbags}\footnote{https://pypi.org/project/rosbags/}. El resto de las secuencias ya se encuentran en formato ROS2 y pueden ser descargadas de \url{https://docs.openvins.com/gs-datasets.html}
 
 
 \section{Ejercicios}
