Tp3: Update ROS2 camera calibration

--- a/tps/tp3/tp3.tex
+++ b/tps/tp3/tp3.tex
@@ -49,7 +49,7 @@ Utilizar el dataset EuRoC\footnote{\url{https://projects.asl.ethz.ch/datasets/do
 \begin{nota}
     Para la calibración se puede utilizar cualquiera de las aplicaciones que se detallan a continuación:
     \begin{itemize}
-        \item ROS2 camera\_calibration:  \url{https://navigation.ros.org/tutorials/docs/camera_calibration.html}
+        \item ROS2 camera\_calibration: \url{https://docs.nav2.org/tutorials/docs/camera_calibration.html}
         \item OpenCV tutorial\_camera\_calibration:\\ \url{https://docs.opencv.org/4.x/d4/d94/tutorial_camera_calibration.html}
         \item Kalibr: \url{https://github.com/ethz-asl/kalibr/wiki/ROS2-Calibration-Using-Kalibr}
         \item Basal Calibration: \url{https://github.com/VladyslavUsenko/basalt/blob/master/doc/Calibration.md}
