Slides 05: Minor changes

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -900,6 +900,14 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{Matríz Esencial}
+
+    %\TODO{Derivación de matriz esencial: \url{https://cave.cs.columbia.edu/Statics/monographs/Uncalibrated%20Stereo\%20FPCV-4-2.pdf}}
+
+\end{frame}
+
+
+\begin{frame}
     \frametitle{Matríz fundamental}
     \footnotesize
 
