--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -1048,7 +1048,12 @@
     \end{figure}
 
     Ejemplo de disparidad: pongamos un dedo enfrente de nuestros ojos a una distancia \SI{20}{\centi\meter} y alternadamente cerremos y abramos cada ojo.
+\end{frame}
 
+\begin{frame}
+    \frametitle{Cámara estéreo}
+    \TODO{Agregar imagenes de template matching para cálculo de disparidad.}
+    \url{https://youtu.be/hUVyDabn1Mg}
 \end{frame}
 
 
